// Copyright (c) Microsoft Corporation. All rights reserved.
// Licensed under the MIT License.

package com.azure.android.communication.ui.chat.presentation.ui.chat

internal class UITestTags {
    companion object {
        const val MESSAGE_INPUT_BOX = "MESSAGE_INPUT_BOX"
        const val MESSAGE_SEND_BUTTON = "MESSAGE_SEND_BUTTON"
        const val MESSAGE_BASIC_CONTENT = "MESSAGE_BASIC_CONTENT"
        const val MESSAGE_TIME_CONTENT = "MESSAGE_TIME_CONTENT"
    }
}
